# libeventsystem

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
.github/workflows/: cmake-multi-platform.yml
cmake/: build-utils.cmake
source/libeventsystem/: CMakeLists.txt  event.hpp  eventmanager.cpp  eventmanager.hpp  eventmanager.ipp  eventsystem.hpp
tests/: CMakeLists.txt
tests/eventsystem/: CMakeLists.txt  main.cpp  test_eventsystem_smoke.cxx
